Fixed status avatar alignment

--- a/assets/flagship/scss/partials/_common-classes.scss
+++ b/assets/flagship/scss/partials/_common-classes.scss
@@ -81,10 +81,6 @@
 	.alignleft .avatar {
 		margin-right: 24px;
 	}
-
-	.format-status .avatar {
-		margin-right: 20px;
-	}
 }
 
 /* WordPress
